--- a/app/src/main/res/drawable/rounded_corners_bg_light.xml
+++ b/app/src/main/res/drawable/rounded_corners_bg_light.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/bg_light"/>
-    <corners android:radius="50dp"/>
+    <corners
+        android:topLeftRadius="50dp" android:topRightRadius="50dp" android:bottomLeftRadius="0dp" android:bottomRightRadius="0dp" />
 </shape>
