--- a/app/src/main/res/layout/activity_enter.xml
+++ b/app/src/main/res/layout/activity_enter.xml
@@ -24,9 +24,11 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logoverde"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="199dp" />
+        android:layout_marginTop="172dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logoverde" />
 
     <TextView
         android:id="@+id/textView3"
