--- a/app/src/main/res/layout/activity_add_balance.xml
+++ b/app/src/main/res/layout/activity_add_balance.xml
@@ -53,7 +53,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
         <Button
-            android:id="@+id/buttonAddBalance"
+            android:id="@+id/buttonAddActivity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
