--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -172,7 +172,7 @@
             android:layout_marginTop="12dp"
             android:ems="10"
             android:hint="(34) 99999-9999"
-            android:inputType="number"
+            android:inputType="text"
             android:textColor="@color/text_color"
             android:textColorHint="@color/primary"
             app:layout_constraintEnd_toEndOf="parent"
