--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="bg_light">#F1FFF3</color>
     <color name="text_color">#0E3E3E</color>
     <color name="text_link">#0068FF</color>
+    <color name="negative">#FF0000</color>
 </resources>
